smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/annotation-invalid-object-key1.smithy
// Syntax error at line 3, column 9: Expected RPAREN(')') but found COLON(':') | Model
namespace com.foo
@foo(100: true)
string MyString
